create auto generation api document

--- a/yaml/artiste.yaml
+++ b/yaml/artiste.yaml
@@ -8,15 +8,18 @@ schema:
       model-type: int64
       json-name: id
       json-type: integer
+      json-example: "1"
 
     - db-column-name: name
       model-name: Name
       model-type: string
       json-name: name
       json-type: string
+      json-example: "Q-bert"
 
     - db-column-name: team_id
       model-name: TeamID
       model-type: int64
       json-name:
       json-type:
+      json-example:
